src/hermes_dart.h

struct HermesABIRuntime;
struct HermesABIManagedPointer;
struct HermesABIManagedPointerVTable {
  void (*invalidate)(struct HermesABIManagedPointer *self);
};
struct HermesABIManagedPointer {
  const struct HermesABIManagedPointerVTable *vtable;
};
enum HermesABIErrorCode {
  HermesABIErrorCodeNativeException,
  HermesABIErrorCodeJSError,
};
struct HermesABIVoidOrError {
  uintptr_t void_or_error;
};
struct HermesABIBoolOrError {
  uintptr_t bool_or_error;
};
struct HermesABIPropNameIDListPtrOrError {
  uintptr_t ptr_or_error;
};
enum HermesABIValueKind {
  HermesABIValueKindUndefined = 0,
  HermesABIValueKindNull = 1,
  HermesABIValueKindBoolean = 2,
  HermesABIValueKindError = 3,
  HermesABIValueKindNumber = 4,
  HermesABIValueKindSymbol = 5 | HERMES_ABI_POINTER_MASK,
  HermesABIValueKindBigInt = 6 | HERMES_ABI_POINTER_MASK,
  HermesABIValueKindString = 7 | HERMES_ABI_POINTER_MASK,
  HermesABIValueKindObject = 9 | HERMES_ABI_POINTER_MASK,
};
struct HermesABIValue {
  enum HermesABIValueKind kind;
  union {
    bool boolean;
    double number;
    struct HermesABIManagedPointer *pointer;
    enum HermesABIErrorCode error;
  } data;
};
struct HermesABIValueOrError {
  struct HermesABIValue value;
};
struct HermesABIPropNameIDList;
struct HermesABIPropNameIDListVTable {
  void (*release)(struct HermesABIPropNameIDList *);
};
struct HermesABIPropNameIDList {
  const struct HermesABIPropNameIDListVTable *vtable;
  const struct HermesABIPropNameID *props;
  size_t size;
};
// Callback typedefs

typedef struct HermesABIValueOrError (*HermesABIHostFunctionCall)(
  void *user_data,
  struct HermesABIRuntime *rt,
  const struct HermesABIValue *this_arg,
  const struct HermesABIValue *args,
  size_t arg_count
);
typedef void (*HermesABIHostFunctionRelease)(void *user_data);
typedef struct HermesABIValueOrError (*HermesABIHostObjectGet)(
  void *user_data,
  struct HermesABIRuntime *rt,
  struct HermesABIPropNameID name
);
typedef struct HermesABIVoidOrError (*HermesABIHostObjectSet)(
  void *user_data,
  struct HermesABIRuntime *rt,
  struct HermesABIPropNameID name,
  const struct HermesABIValue *value
);
typedef struct HermesABIPropNameIDListPtrOrError (*HermesABIHostObjectGetOwnKeys)(
  void *user_data,
  struct HermesABIRuntime *rt
);
typedef void (*HermesABIHostObjectRelease)(void *user_data);
typedef void (*HermesABIMutableBufferRelease)(void *user_data);
typedef void (*HermesABINativeStateRelease)(void *user_data);
struct HermesABIRuntimeConfig {
  bool enable_eval;
  bool es6_proxy;
  bool enable_generator;
  bool enable_async_generators;
  bool es6_block_scoping;
  bool intl;
  bool microtask_queue;
  int32_t compilation_mode;
  uint32_t bytecode_warmup_percent;
  bool optimized_eval;
  bool enable_hermes_internal;
  bool enable_hermes_internal_test_methods;
  bool randomize_memory_layout;
};
struct HermesABIPreparedJavaScript;
struct HermesABIPreparedJavaScriptOrError {
  uintptr_t ptr_or_error;
};
struct HermesABIStringData {
  bool is_ascii;
  const void *data;
  size_t length;
};
// Runtime

struct HermesABIPreparedJavaScriptOrError
hermes_runtime_prepared_javascript_create(
  struct HermesABIRuntime *rt,
  const uint8_t *utf8_source,
  size_t source_length,
  const char *source_url
);
struct HermesABIValueOrError
hermes_runtime_prepared_javascript_evaluate(
  struct HermesABIRuntime *rt,
  struct HermesABIPreparedJavaScript *prepared
);
uint64_t hermes_value_get_unique_id(
  struct HermesABIRuntime *rt,
  struct HermesABIValue val
);
bool hermes_runtime_drain_microtasks(
  struct HermesABIRuntime *rt,
  int max_microtasks_hint
);
struct HermesABIValueOrError hermes_value_create_from_json_utf8(
  struct HermesABIRuntime *rt,
  const uint8_t *json_bytes,
  size_t length
);
struct HermesABIStringData hermes_string_get_data(
  struct HermesABIRuntime *rt,
  struct HermesABIString str
);
struct HermesABIStringData hermes_propnameid_get_data(
  struct HermesABIRuntime *rt,
  struct HermesABIPropNameID prop
);
struct HermesABIRuntime *hermes_runtime_create(
  struct HermesABIRuntimeConfig config
);
void hermes_runtime_release(struct HermesABIRuntime *rt);
void hermes_runtime_release_from_finalizer(struct HermesABIRuntime *rt);
struct HermesABIObject hermes_runtime_get_global_object(
  struct HermesABIRuntime *rt
);
// Runtime error handling

void hermes_runtime_set_js_error_value(
  struct HermesABIRuntime *rt,
  struct HermesABIValue error_value
);
void hermes_runtime_set_native_exception_message(
  struct HermesABIRuntime *rt,
  const char *message
);
struct HermesABIValue hermes_runtime_get_and_clear_js_error_value(
  struct HermesABIRuntime *rt
);
char *hermes_runtime_get_and_clear_native_exception_message(
  struct HermesABIRuntime *rt
);
void hermes_register_pointer(
  struct HermesABIRuntime *rt,
  struct HermesABIManagedPointer *ptr
);
char *hermes_string_to_utf8(
  struct HermesABIRuntime *rt,
  struct HermesABIString str
);
struct HermesABIString hermes_string_clone(
  struct HermesABIRuntime *rt,
  struct HermesABIString str
);
bool hermes_string_strict_equals(
  struct HermesABIRuntime *rt,
  struct HermesABIString a,
  struct HermesABIString b
);
// Symbols

char *hermes_symbol_to_utf8(
  struct HermesABIRuntime *rt,
  struct HermesABISymbol sym
);
struct HermesABISymbol hermes_symbol_clone(
  struct HermesABIRuntime *rt,
  struct HermesABISymbol sym
);
bool hermes_symbol_strict_equals(
  struct HermesABIRuntime *rt,
  struct HermesABISymbol a,
  struct HermesABISymbol b
);
char *hermes_propnameid_to_utf8(
  struct HermesABIRuntime *rt,
  struct HermesABIPropNameID name
);
struct HermesABIPropNameIDList *hermes_propnameid_list_create(
  const struct HermesABIPropNameID *props,
  size_t size
);
// Weak objects

struct HermesABIWeakObjectOrError hermes_weak_object_create(
  struct HermesABIRuntime *rt,
  struct HermesABIObject obj
);
struct HermesABIValue hermes_weak_object_lock(
  struct HermesABIRuntime *rt,
  struct HermesABIWeakObject wo
);