lib/hermes_dart.g.dart


@ffi.Native<
  HermesABIStringData Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIPropNameID,
  )
>()
external HermesABIStringData hermes_propnameid_get_data(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIPropNameID prop,
);

@ffi.Native<
  ffi.Pointer<HermesABIPropNameIDList> Function(
    ffi.Pointer<HermesABIPropNameID>,
    ffi.Size,
  )
>()
external ffi.Pointer<HermesABIPropNameIDList> hermes_propnameid_list_create(
  ffi.Pointer<HermesABIPropNameID> props,
  int size,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIPropNameID,
  )
>()
external ffi.Pointer<ffi.Char> hermes_propnameid_to_utf8(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIPropNameID name,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<HermesABIRuntime>,
    ffi.Pointer<HermesABIManagedPointer>,
  )
>()
external void hermes_register_pointer(
  ffi.Pointer<HermesABIRuntime> rt,
  ffi.Pointer<HermesABIManagedPointer> ptr,
);

@ffi.Native<ffi.Pointer<HermesABIRuntime> Function(HermesABIRuntimeConfig)>()
external ffi.Pointer<HermesABIRuntime> hermes_runtime_create(
  HermesABIRuntimeConfig config,
);

@ffi.Native<ffi.Bool Function(ffi.Pointer<HermesABIRuntime>, ffi.Int)>()
external bool hermes_runtime_drain_microtasks(
  ffi.Pointer<HermesABIRuntime> rt,
  int max_microtasks_hint,
);

@ffi.Native<HermesABIValue Function(ffi.Pointer<HermesABIRuntime>)>()
external HermesABIValue hermes_runtime_get_and_clear_js_error_value(
  ffi.Pointer<HermesABIRuntime> rt,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<HermesABIRuntime>)>()
external ffi.Pointer<ffi.Char>
hermes_runtime_get_and_clear_native_exception_message(
  ffi.Pointer<HermesABIRuntime> rt,
);

@ffi.Native<HermesABIObject Function(ffi.Pointer<HermesABIRuntime>)>()
external HermesABIObject hermes_runtime_get_global_object(
  ffi.Pointer<HermesABIRuntime> rt,
);

@ffi.Native<
  HermesABIPreparedJavaScriptOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
  )
>()
external HermesABIPreparedJavaScriptOrError
hermes_runtime_prepared_javascript_create(
  ffi.Pointer<HermesABIRuntime> rt,
  ffi.Pointer<ffi.Uint8> utf8_source,
  int source_length,
  ffi.Pointer<ffi.Char> source_url,
);

@ffi.Native<
  HermesABIValueOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    ffi.Pointer<HermesABIPreparedJavaScript>,
  )
>()
external HermesABIValueOrError hermes_runtime_prepared_javascript_evaluate(
  ffi.Pointer<HermesABIRuntime> rt,
  ffi.Pointer<HermesABIPreparedJavaScript> prepared,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<HermesABIRuntime>)>()
external void hermes_runtime_release(
  ffi.Pointer<HermesABIRuntime> rt,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<HermesABIRuntime>)>()
external void hermes_runtime_release_from_finalizer(
  ffi.Pointer<HermesABIRuntime> rt,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<HermesABIRuntime>, HermesABIValue)>()
external void hermes_runtime_set_js_error_value(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIValue error_value,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<HermesABIRuntime>, ffi.Pointer<ffi.Char>)
>()
external void hermes_runtime_set_native_exception_message(
  ffi.Pointer<HermesABIRuntime> rt,
  ffi.Pointer<ffi.Char> message,
);

@ffi.Native<
  HermesABIString Function(ffi.Pointer<HermesABIRuntime>, HermesABIString)
>()
external HermesABIString hermes_string_clone(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIString str,
);

@ffi.Native<
  HermesABIStringData Function(ffi.Pointer<HermesABIRuntime>, HermesABIString)
>()
external HermesABIStringData hermes_string_get_data(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIString str,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIString,
    HermesABIString,
  )
>()
external bool hermes_string_strict_equals(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIString a,
  HermesABIString b,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<HermesABIRuntime>, HermesABIString)
>()
external ffi.Pointer<ffi.Char> hermes_string_to_utf8(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIString str,
);

@ffi.Native<
  HermesABISymbol Function(ffi.Pointer<HermesABIRuntime>, HermesABISymbol)
>()
external HermesABISymbol hermes_symbol_clone(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABISymbol sym,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABISymbol,
    HermesABISymbol,
  )
>()
external bool hermes_symbol_strict_equals(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABISymbol a,
  HermesABISymbol b,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<HermesABIRuntime>, HermesABISymbol)
>()
external ffi.Pointer<ffi.Char> hermes_symbol_to_utf8(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABISymbol sym,
);

@ffi.Native<
  HermesABIValueOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
  )
>()
external HermesABIValueOrError hermes_value_create_from_json_utf8(
  ffi.Pointer<HermesABIRuntime> rt,
  ffi.Pointer<ffi.Uint8> json_bytes,
  int length,
);

@ffi.Native<
  ffi.Uint64 Function(ffi.Pointer<HermesABIRuntime>, HermesABIValue)
>()
external int hermes_value_get_unique_id(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIValue val,
);

@ffi.Native<
  HermesABIWeakObjectOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIObject,
  )
>()
external HermesABIWeakObjectOrError hermes_weak_object_create(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
);

@ffi.Native<
  HermesABIValue Function(ffi.Pointer<HermesABIRuntime>, HermesABIWeakObject)
>()
external HermesABIValue hermes_weak_object_lock(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIWeakObject wo,
);

final class HermesABIArray extends ffi.Struct {
  external ffi.Pointer<HermesABIManagedPointer> pointer;

  static ffi.Pointer<HermesABIArray> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<HermesABIManagedPointer> pointer,
  }) => $allocator<HermesABIArray>()..ref.pointer = pointer;
}

final class HermesABIArrayBuffer extends ffi.Struct {
  external ffi.Pointer<HermesABIManagedPointer> pointer;

  static ffi.Pointer<HermesABIArrayBuffer> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<HermesABIManagedPointer> pointer,
  }) => $allocator<HermesABIArrayBuffer>()..ref.pointer = pointer;
}

final class HermesABIArrayBufferOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int ptr_or_error;

  static ffi.Pointer<HermesABIArrayBufferOrError> $allocate(
    ffi.Allocator $allocator, {
    required int ptr_or_error,
  }) =>
      $allocator<HermesABIArrayBufferOrError>()
        ..ref.ptr_or_error = ptr_or_error;
}

final class HermesABIArrayOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int ptr_or_error;

  static ffi.Pointer<HermesABIArrayOrError> $allocate(
    ffi.Allocator $allocator, {
    required int ptr_or_error,
  }) => $allocator<HermesABIArrayOrError>()..ref.ptr_or_error = ptr_or_error;
}

final class HermesABIBigInt extends ffi.Struct {
  external ffi.Pointer<HermesABIManagedPointer> pointer;

  static ffi.Pointer<HermesABIBigInt> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<HermesABIManagedPointer> pointer,
  }) => $allocator<HermesABIBigInt>()..ref.pointer = pointer;
}

final class HermesABIBigIntOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int ptr_or_error;

  static ffi.Pointer<HermesABIBigIntOrError> $allocate(
    ffi.Allocator $allocator, {
    required int ptr_or_error,
  }) => $allocator<HermesABIBigIntOrError>()..ref.ptr_or_error = ptr_or_error;
}

final class HermesABIBoolOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int bool_or_error;

  static ffi.Pointer<HermesABIBoolOrError> $allocate(
    ffi.Allocator $allocator, {
    required int bool_or_error,
  }) => $allocator<HermesABIBoolOrError>()..ref.bool_or_error = bool_or_error;
}

enum HermesABIErrorCode {
  HermesABIErrorCodeNativeException(0),
  HermesABIErrorCodeJSError(1)
  ;

  final int value;
  const HermesABIErrorCode(this.value);

  static HermesABIErrorCode fromValue(int value) => switch (value) {
    0 => HermesABIErrorCodeNativeException,
    1 => HermesABIErrorCodeJSError,
    _ => throw ArgumentError('Unknown value for HermesABIErrorCode: $value'),
  };
}

final class HermesABIFunction extends ffi.Struct {
  external ffi.Pointer<HermesABIManagedPointer> pointer;

  static ffi.Pointer<HermesABIFunction> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<HermesABIManagedPointer> pointer,
  }) => $allocator<HermesABIFunction>()..ref.pointer = pointer;
}

final class HermesABIFunctionOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int ptr_or_error;

  static ffi.Pointer<HermesABIFunctionOrError> $allocate(
    ffi.Allocator $allocator, {
    required int ptr_or_error,
  }) => $allocator<HermesABIFunctionOrError>()..ref.ptr_or_error = ptr_or_error;
}

typedef HermesABIHostFunctionCall =
    ffi.Pointer<ffi.NativeFunction<HermesABIHostFunctionCallFunction>>;
typedef HermesABIHostFunctionCallFunction =
    HermesABIValueOrError Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<HermesABIRuntime> rt,
      ffi.Pointer<HermesABIValue> this_arg,
      ffi.Pointer<HermesABIValue> args,
      ffi.Size arg_count,
    );
typedef DartHermesABIHostFunctionCallFunction =
    HermesABIValueOrError Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<HermesABIRuntime> rt,
      ffi.Pointer<HermesABIValue> this_arg,
      ffi.Pointer<HermesABIValue> args,
      int arg_count,
    );
typedef HermesABIHostFunctionRelease =
    ffi.Pointer<ffi.NativeFunction<HermesABIHostFunctionReleaseFunction>>;
typedef HermesABIHostFunctionReleaseFunction =
    ffi.Void Function(ffi.Pointer<ffi.Void> user_data);
typedef DartHermesABIHostFunctionReleaseFunction =
    void Function(ffi.Pointer<ffi.Void> user_data);
typedef HermesABIHostObjectGet =
    ffi.Pointer<ffi.NativeFunction<HermesABIHostObjectGetFunction>>;
typedef HermesABIHostObjectGetFunction =
    HermesABIValueOrError Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<HermesABIRuntime> rt,
      HermesABIPropNameID name,
    );
typedef HermesABIHostObjectGetOwnKeys =
    ffi.Pointer<ffi.NativeFunction<HermesABIHostObjectGetOwnKeysFunction>>;
typedef HermesABIHostObjectGetOwnKeysFunction =
    HermesABIPropNameIDListPtrOrError Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<HermesABIRuntime> rt,
    );
typedef HermesABIHostObjectRelease =
    ffi.Pointer<ffi.NativeFunction<HermesABIHostObjectReleaseFunction>>;
typedef HermesABIHostObjectReleaseFunction =
    ffi.Void Function(ffi.Pointer<ffi.Void> user_data);
typedef DartHermesABIHostObjectReleaseFunction =
    void Function(ffi.Pointer<ffi.Void> user_data);
typedef HermesABIHostObjectSet =
    ffi.Pointer<ffi.NativeFunction<HermesABIHostObjectSetFunction>>;
typedef HermesABIHostObjectSetFunction =
    HermesABIVoidOrError Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<HermesABIRuntime> rt,
      HermesABIPropNameID name,
      ffi.Pointer<HermesABIValue> value,
    );

final class HermesABIManagedPointer extends ffi.Opaque {}

typedef HermesABIMutableBufferRelease =
    ffi.Pointer<ffi.NativeFunction<HermesABIMutableBufferReleaseFunction>>;
typedef HermesABIMutableBufferReleaseFunction =
    ffi.Void Function(ffi.Pointer<ffi.Void> user_data);
typedef DartHermesABIMutableBufferReleaseFunction =
    void Function(ffi.Pointer<ffi.Void> user_data);
typedef HermesABINativeStateRelease =
    ffi.Pointer<ffi.NativeFunction<HermesABINativeStateReleaseFunction>>;
typedef HermesABINativeStateReleaseFunction =
    ffi.Void Function(ffi.Pointer<ffi.Void> user_data);
typedef DartHermesABINativeStateReleaseFunction =
    void Function(ffi.Pointer<ffi.Void> user_data);
